Not ready yet:

[ CORE. Support for automake ]

[ CORE. Support for Service Tree ] 
[ CORE. Support for flexible permissions ]

[ CORE. Make Zabbix compile by cc ]

[ PHP. Show diff instead of real values ]
[ PHP. Show triggers by userid ]

[ CORE. Add support for new trigger statuses: MODIFIED/NOTSUPORTED ]

[ DOCS. All parameters should contain section "How can be used" in the Manual ]

Changes for 1.0beta3:

 - added support for Inverse Select in status of triggers (Alexei)
 - added support for flexible permissions (Alexei)
 - fixed items.php (Alexei)
 - added table 'rights' (Alexei)
 - added time legend for simple graph (Alexei)
 - already existing hosts can be used as template from new host (Alexei)
 - new algorithm for audible notification in screen "Status of Triggers"
 (Alexei)
 - changed definition of DebugLevel (Alexei)
 - improved update_triggers() (Alexei)
 - fixed get_lastvalue() (Alexei)
 - minor changes in include/cfg.c (Alexei)
 - column functions.lastvalue changed to varchar(255) (Alexei)
 - column items.lastvalue changed to varchar(255) (Alexei)
 - column items.prevvalue changed to varchar(255) (Alexei)
 - support for version[zabbix_agent] (Alexei)
 - better validation of trigger expressions in validate_expression
 (Alexei)
 - common parser of config files in include/cfg.c (Alexei)
 - added column value_type to table items_template (Alexei)
 - support for system[uname] (Alexei)
 - support for system[hostname] (Alexei)
 - parameter Server can consist of list of Zabbix servers (Alexei)
 - SO_LINGER is default socket option for zabbix_sender (Alexei)
 - added support of NoTimeWait for zabbix_trapperd (Alexei)
 - fixed schema for PostgreSQL, column disable_until (Alexei)
 - added directory upgrades/dbpatches/1.0beta2_to_1.0beta3 (Alexei)
 - correct handling of timeout situations for zabbix_agentd (Alexei)
 - added support for non-syslog logging (Alexei)
 - added parameter LogFile for zabbix_trapper (Alexei)